projektide lehtedel header logo vahetamine

--- a/ajakiri.html
+++ b/ajakiri.html
@@ -42,14 +42,13 @@
                             <a href="https://dribbble.com/" title="Dribbble" target="_blank"><i class="fab fa-dribbble"></i></a>                          
                         </div>
                     </div> -->
-            <!-- start logo -->
-            <div class="col text-md-left pl-0 pl-md-3">
-                <a class="logo" href="index.html"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296826/Koduleht/1x/logop1.png"
-                        data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296825/Koduleht/2x/logo2x.png"
-                        class="default" alt="Oliver Juss"></a>
-            </div>
-            <!-- end logo -->
+                    <div class="col text-md-left pl-0 pl-md-3">
+                        <a class="logo" href="index.html"><img
+                                src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                                data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                                class="default" alt="Oliver Juss"></a>
+                    </div>
+                    <!-- end logo -->
 
         </div>
         <!-- End Header Navigation -->
@@ -275,11 +274,35 @@
         </div>
     </footer>
     <!-- lopp uus footer -->
-
-        <!-- <footer class="footer-classic-dark bg-extra-dark-gray padding-five-bottom sm-padding-30px-bottom">
-            <div class="bg-dark-footer padding-50px-tb sm-padding-30px-tb">
-                <div class="container">
-                    <div class="row align-items-center"> -->
+    <section class="wow animate__fadeIn  p-0">
+        <div class="container-fluid p-0">
+            
+            <!-- next and previous projcet stat -->
+            <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
+                <div class="w-45 text-start">
+                    <!-- <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
+                        <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
+                        <a href="van_gogh.html">
+                            <i class="ti-arrow-left blog-nav-icon"></i>
+                            Van goghi Raamat
+                        </a>
+                    </div> -->
+                </div>
+                <!-- <div class="w-10 text-center">
+                    <a href="portfolio-boxed-grid-overlay.html" class="blog-nav-link blog-nav-home"><i class="ti-layout-grid2-alt"></i></a>
+                </div> -->
+                <div class="w-45 text-end">
+                    <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
+                        <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next Project</span>
+                        <a href="meny.html">
+                            <i class="ti-arrow-right blog-nav-icon"></i>
+                            Bite Dount Menu
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
                         <!-- start slogan -->
                         <!-- <div class="col-lg-4 col-md-5 text-center alt-font sm-margin-15px-bottom">
                             London based highly creative studio
