--- a/meny.html
+++ b/meny.html
@@ -45,8 +45,8 @@
             <!-- start logo -->
             <div class="col text-md-left pl-0 pl-md-3">
                 <a class="logo" href="index.html"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296826/Koduleht/1x/logop1.png"
-                        data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641296825/Koduleht/2x/logo2x.png"
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                        data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
                         class="default" alt="Oliver Juss"></a>
             </div>
             <!-- end logo -->
