ajakirja lehel pildide muutmine

--- a/ajakiri.html
+++ b/ajakiri.html
@@ -91,14 +91,14 @@
         <section class="wow animate__fadeIn">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652854290/Koduleht/ametikooli100_esikaas_wmtpr7.jpg" class="w-100" alt=""/>
+                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center">
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569772/Koduleht/esikaas_nkggfi.jpg"  class="w-55" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652855185/Koduleht/anders_meistrson_interview2_fb0g88.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665570226/Koduleht/mida_p6nevat_kuressaares_nqbb18.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652868074/Koduleht/must_do_list1_g1xfve.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569400/Koduleht/Meist_wfgayg.jpg" class="w-100" alt=""/>
                     </div>
                    
                 </div>
