tugevad küljed icond teksite üleval

--- a/CV.html
+++ b/CV.html
@@ -490,13 +490,13 @@
                                     </div>
                                     <!-- end features box item -->
                                     <!-- start features box item -->
-                                    <div class="col margin-six-bottom md-margin-50px-bottom sm-margin-40px-bottom wow animate__fadeInUp last-paragraph-no-margin"
+                                    <div class="col margin-six-bottom md-margin-50px-bottom sm-margin-40px-bottom wow animate__fadeInUp last-paragraph-no-margin text-center"
                                         data-wow-delay="0.2s">
                                         <div class="feature-box-5 position-relative">
                                             <i class="icon-tools icon-medium text-medium-gray"></i>
                                             <div class="feature-content">
                                                 <div
-                                                    class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-600">
+                                                    class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-600 ">
                                                     Loominguline</div>
 
                                             </div>
