töö sectioni liikutamine

--- a/CV.html
+++ b/CV.html
@@ -212,36 +212,41 @@
                     </div>
                     <!-- end töö item -->
                 </section>
+            </section>
+    </section>
                 <!-- start text box Konkursid section -->
                 <section class="wow animate__fadeIn">
                     <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
-                                <div class="position-relative overflow-hidden w-100">
-                                    <span
-                                        class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">KONKURSID</span>
+                            <div class="row justify-content-center">
+                                <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
+                                    <div class="position-relative overflow-hidden w-100">
+                                        <span
+                                            class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">KONKURSID</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="row row-cols-1 row-cols-xl-1 row-cols-md-2 row-cols-sm-2 feature-box feature-box-7">
-                        <!-- start feature item -->
-                        <div class="col p-0 wow animate__fadeInLeft last-paragraph-no-margin">
-                            <div class="box">
-                                <div class="content">
-                                    <figure>
-                                        <i
-                                            class="icon-hotairballoon icon-extra-medium text-medium-gray margin-15px-bottom"></i>
-                                        <span class="alt-font text-extra-dark-gray d-block margin-10px-bottom">Haridus-
-                                            ja
-                                            Teadusministeeriumi korraldatud konkurss</span>
-                                        <div class="details">
-                                            <p class="w-65 mx-auto">Digitaalse kunsti konkursitöö I koht</p>
+                        
+                            <div class="row row-cols-1 row-cols-xl-1 row-cols-md-2 row-cols-sm-2 feature-box feature-box-7">
+                                <!-- start feature item -->
+                                <div class="col p-0 wow animate__fadeInLeft last-paragraph-no-margin">
+                                    <div class="box">
+                                        <div class="content">
+                                            <figure>
+                                                <i
+                                                    class="icon-hotairballoon icon-extra-medium text-medium-gray margin-15px-bottom"></i>
+                                                <span class="alt-font text-extra-dark-gray d-block margin-10px-bottom">Haridus-
+                                                    ja
+                                                    Teadusministeeriumi korraldatud konkurss</span>
+                                                <div class="details">
+                                                    <p class="w-65 mx-auto">Digitaalse kunsti konkursitöö I koht</p>
+                                                </div>
+                                            </figure>
                                         </div>
-                                    </figure>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                </section>
                         <!-- end feature item -->
 
 
@@ -496,7 +501,7 @@
                                             <i class="icon-tools icon-medium text-medium-gray"></i>
                                             <div class="feature-content">
                                                 <div
-                                                    class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-600 ">
+                                                    class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-600 text-center">
                                                     Loominguline</div>
 
                                             </div>
