sportib2nneri ja pipewelli mokupide muutmine

--- a/index.html
+++ b/index.html
@@ -197,9 +197,10 @@
                                             <div class="portfolio-hover-box align-middle">
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span
-                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Oliver Juss Logo</span>
-                                                        <p class="no-letter-spacing text-small mb-0 text-medium-gray">
-                                                            Logo ja Disain</p>
+                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Oliver
+                                                    Juss Logo</span>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">
+                                                    Logo ja Disain</p>
                                             </div>
                                         </div>
                                     </figcaption>
@@ -235,7 +236,7 @@
                             <a href="pipewell.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641722353/Koduleht/pipewell-tupo_dqvsil.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670492819/Koduleht/pipewell_v_org_1_1_kbueqn.jpg"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -372,7 +373,7 @@
                             <a href="spordibanner.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647175494/Koduleht/2-guys_i1dnb3.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670493944/Koduleht/champion_banner_2700_1364_kegxkd.jpg"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
