mockupide muutmine ja marabu standi lismamine

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                             <a href="koolitusmajakas.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647170103/Koduleht/900x900px-_koolitusmajakasLogo1_halltaust_rm1imv.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670503285/Koduleht/koolitusmajaks_mockup_1x1_bayohv.jpg"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -324,8 +324,31 @@
                                 </figure>
                             </a>
                         </li>
+                        <!-- start  portfolio item -->
+                        <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                            <a href="syte.html">
+                                <figure>
+                                    <div class="portfolio-img"><img
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670499861/Koduleht/syte_org_mc66i7.jpg"
+                                            alt="" /></div>
+                                    <figcaption>
+                                        <div class="portfolio-hover-main">
+                                            <div class="portfolio-hover-box align-middle">
+                                                <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                <span
+                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Syte
+                                                    koduleht</span>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd
+                                                    2021 / 2022</p>
+                                            </div>
+                                        </div>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li> -->
+                        <!-- end portfolio item-->
                         <!-- end portfolio item -->
-                        <li class="grid-item wow animate__fadeInUp trükis disain" data-wow-delay="0.2s">
+                        <!-- <li class="grid-item wow animate__fadeInUp trükis disain" data-wow-delay="0.2s">
                             <a href="piktogrammid.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -344,7 +367,7 @@
                                     </figcaption>
                                 </figure>
                             </a>
-                        </li>
+                        </li> -->
                         <!-- end portfolio item -->
                         <!-- start  portfolio item -->
                         <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
@@ -368,6 +391,29 @@
                             </a>
                         </li>
                         <!-- end portfolio item -->
+                        <!-- start  portfolio item -->
+                        <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
+                            <a href="kalender.html">
+                                <figure>
+                                    <div class="portfolio-img"><img
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670521217/Koduleht/marabu_daim_stand_aftztd.jpg"
+                                            alt="" /></div>
+                                    <figcaption>
+                                        <div class="portfolio-hover-main">
+                                            <div class="portfolio-hover-box align-middle">
+                                                <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                <span
+                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Kunstikalender</span>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js
+                                                    Disain</p>
+                                            </div>
+                                        </div>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
+                        <!-- end portfolio item -->
+
                         <!-- start portfolio item -->
                         <li class="grid-item grid-item-double trükis disain bänner reklaam wow animate__fadeInUp">
                             <a href="spordibanner.html">
@@ -433,27 +479,7 @@
                                         </figcaption>
                                     </figure> -->
                         <!-- end portfolio item -->
-                        <!-- start  portfolio item -->
-                        <!-- <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
-                                    <a href="syte.html">
-                                        <figure>
-                                            <div class="portfolio-img"><img
-                                                    src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642865075/Koduleht/syte_mockup_pbv5mx.jpg"
-                                                    alt="" /></div>
-                                            <figcaption>
-                                                <div class="portfolio-hover-main">
-                                                    <div class="portfolio-hover-box align-middle">
-                                                        <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                        <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Syte
-                                                            koduleht</span>
-                                                        <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
-                                                    </div>
-                                                </div>
-                                            </figcaption>
-                                        </figure>
-                                    </a>
-                                </li> -->
-                        <!-- end portfolio item -->
+
 
 
                     </ul>
