--- a/index.html
+++ b/index.html
@@ -480,6 +480,27 @@
                                     </figure> -->
                         <!-- end portfolio item -->
 
+                        <!-- start  portfolio item -->
+                         <!-- <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                                    <a href="syte.html">
+                                        <figure>
+                                            <div class="portfolio-img"><img
+                                                    src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642865075/Koduleht/syte_mockup_pbv5mx.jpg"
+                                                    alt="" /></div>
+                                            <figcaption>
+                                                <div class="portfolio-hover-main">
+                                                    <div class="portfolio-hover-box align-middle">
+                                                        <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                        <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Syte
+                                                            koduleht</span>
+                                                        <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
+                                                    </div>
+                                                </div>
+                                            </figcaption>
+                                        </figure>
+                                    </a>
+                                </li>  -->
+                        <!-- end portfolio item -->
 
 
                     </ul>
