van gohi ja kalendri ära välja

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         </li>
                         <!-- end portfolio item -->
                         <!-- start portfolio item -->
-                        <li class="grid-item grid-item-double trükis disain hindamine wow animate__fadeInUp"
+                        <!-- <li class="grid-item grid-item-double trükis disain hindamine wow animate__fadeInUp"
                             data-wow-delay="0.4s">
                             <a href="van_gogh.html">
                                 <figure>
@@ -275,7 +275,7 @@
                                     </figcaption>
                                 </figure>
                             </a>
-                        </li>
+                        </li> -->
                         <!-- end portfolio item -->
 
                         <!-- start portfolio item -->
@@ -345,7 +345,7 @@
                                     </figcaption>
                                 </figure>
                             </a>
-                        </li> 
+                        </li>
                         <!-- end portfolio item-->
                         <!-- end portfolio item -->
                         <!-- <li class="grid-item wow animate__fadeInUp trükis disain" data-wow-delay="0.2s">
@@ -370,7 +370,7 @@
                         </li> -->
                         <!-- end portfolio item -->
                         <!-- start  portfolio item -->
-                        <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
+                        <!-- <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
                             <a href="kalender.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -389,7 +389,7 @@
                                     </figcaption>
                                 </figure>
                             </a>
-                        </li>
+                        </li> -->
                         <!-- end portfolio item -->
                         <!-- start  portfolio item -->
                         <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
@@ -481,7 +481,7 @@
                         <!-- end portfolio item -->
 
                         <!-- start  portfolio item -->
-                         <!-- <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                        <!-- <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
                                     <a href="syte.html">
                                         <figure>
                                             <div class="portfolio-img"><img
