--- a/index.html
+++ b/index.html
@@ -232,26 +232,7 @@
                         </li>
                         <!-- end portfolio item -->
                         <!-- start portfolio item -->
-                        <li class="grid-item grid-item-double logo disain wow animate__fadeInUp" data-wow-delay="0.2s">
-                            <a href="pipewell.html">
-                                <figure>
-                                    <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670492819/Koduleht/pipewell_v_org_1_1_kbueqn.jpg"
-                                            alt="" /></div>
-                                    <figcaption>
-                                        <div class="portfolio-hover-main">
-                                            <div class="portfolio-hover-box align-middle">
-                                                <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                <span
-                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Pipewell</span>
-                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
-                                                    Disain</p>
-                                            </div>
-                                        </div>
-                                    </figcaption>
-                                </figure>
-                            </a>
-                        </li>
+
                         <!-- end portfolio item -->
                         <!-- start portfolio item -->
                         <!-- <li class="grid-item grid-item-double trükis disain hindamine wow animate__fadeInUp"
@@ -284,15 +265,15 @@
                             <a href="meny.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673340461/Koduleht/original_votink_zk07de.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673725008/Koduleht/original_votink2700x1364_vroa9w.jpg"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
                                             <div class="portfolio-hover-box align-middle">
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span
-                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Bite
-                                                    Dounts</span>
+                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">SOS
+                                                    Lasteküla voldik</span>
                                                 <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis ja
                                                     Disain</p>
                                             </div>
@@ -302,14 +283,35 @@
                             </a>
                         </li>
                         <!-- end portfolio item -->
+                        <li class="grid-item grid-item-double logo disain wow animate__fadeInUp" data-wow-delay="0.2s">
+                            <a href="pipewell.html">
+                                <figure>
+                                    <div class="portfolio-img"><img
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670492819/Koduleht/pipewell_v_org_1_1_kbueqn.jpg"
+                                            alt="" /></div>
+                                    <figcaption>
+                                        <div class="portfolio-hover-main">
+                                            <div class="portfolio-hover-box align-middle">
+                                                <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                <span
+                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Pipewell</span>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
+                                                    Disain</p>
+                                            </div>
+                                        </div>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
 
                         <!-- start portfolio item -->
                         <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
                             <a href="koolitusmajakas.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670503285/Koduleht/koolitusmajaks_mockup_1x1_bayohv.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673717095/Koduleht/original_koolimajaks_mockup_2700x1364_jwmvic.jpg"
                                             alt="" /></div>
+                                    <!-- style="height: 631.98px;" -->
                                     <figcaption>
                                         <div class="portfolio-hover-main">
                                             <div class="portfolio-hover-box align-middle">
@@ -396,14 +398,40 @@
                             <a href="kalender.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670521217/Koduleht/marabu_daim_stand_aftztd.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673710877/Koduleht/floor-display-stand-mockup-right-view_2000x2000_yxnenp.jpg"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
                                             <div class="portfolio-hover-box align-middle">
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span
-                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Kunstikalender</span>
+                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Daim
+                                                    ja Marabou ühisstend</span>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js
+                                                    Disain</p>
+                                            </div>
+                                        </div>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
+                        <!-- end portfolio item -->
+
+                        <!-- start  portfolio item -->
+                        <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
+                            <a href="kalender.html">
+                                <figure>
+                                    <div class="portfolio-img"><img
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673710877/Koduleht/floor-display-stand-mockup-right-view_2000x2000_yxnenp.jpg"
+                                            alt="" /></div>
+                                    <figcaption>
+                                        <div class="portfolio-hover-main">
+                                            <div class="portfolio-hover-box align-middle">
+                                                <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                <span
+                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Mars
+                                                    roll-up
+                                                    bänner</span>
                                                 <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js
                                                     Disain</p>
                                             </div>
@@ -516,8 +544,8 @@
             <div class="row align-items-center">
                 <!-- start copyright -->
                 <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
-                    &COPY; Kõik õigused kaitstud 2022 <a href="#" target="_blank"
-                        title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee
+                    &COPY; Kõik õigused kaitstud 2023 <a href="mailto:oliver.juss@ametikool.ee" target="_blank"
+                        title="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee</a>
                 </div>
                 <!-- end copyright -->
                 <!-- start logo -->
