Sos lateküla lehe lisamine

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <!-- start portfolio item -->
                         <li class="grid-item grid-item-double trükis disain wow animate__fadeInUp"
                             data-wow-delay="0.4s">
-                            <a href="meny.html">
+                            <a href="sos_lastekula_voltik.html">
                                 <figure>
                                     <div class="portfolio-img"><img
                                             src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673725008/Koduleht/original_votink2700x1364_vroa9w.jpg"
