--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -289,15 +289,15 @@
 
     <!-- <footer class="footer-classic-dark bg-extra-dark-gray padding-five-bottom sm-padding-30px-bottom">
             <div class="bg-dark-footer padding-50px-tb sm-padding-30px-tb">
-               <!-- uus footer -->
+                uus footer -->
     <!-- start footer -->
     <footer class="footer-center-logo padding-five-tb sm-padding-30px-tb">
         <div class="container">
             <div class="row align-items-center">
                 <!-- start copyright -->
                 <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
-                    &COPY; Kõik õigused kaitstud 2022 <a href="#" target="_blank"
-                        title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee
+                    &COPY; Kõik õigused kaitstud 2023 <a href="#" target="_blank"
+                        title="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee</a>
                 </div>
                 <!-- end copyright -->
                 <!-- start logo -->
