--- a/sos_lastekula_voltik.html
+++ b/sos_lastekula_voltik.html
@@ -364,6 +364,44 @@
             </div>
         </footer> -->
     <!-- end footer -->
+    <!-- start footer -->
+    <footer class="footer-center-logo padding-five-tb sm-padding-30px-tb">
+        <div class="container">
+            <div class="row align-items-center">
+                <!-- start copyright -->
+                <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
+                    &COPY; Kõik õigused kaitstud 2023 <a href="#" target="_blank"
+                        title="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee</a>
+                </div>
+                <!-- end copyright -->
+                <!-- start logo -->
+                <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
+                    <a href="index.html"><img class="footer-logo"
+                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                            data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                            alt="Portfolio"></a>
+                </div>
+                <!-- end logo -->
+                <!-- start social media -->
+                <div class="col-lg-4 col-md-5 text-center">
+                    <span class="alt-font text-small margin-10px-right md-margin-5px-right"> +372 5668 1811</span>
+
+                    <div class="social-icon-style-8 d-inline-block align-middle">
+                        <ul class="small-icon mb-0">
+                            <li><a class="facebook" href="#" target="_blank"><i class="fab fa-facebook-f"
+                                        aria-hidden="true"></i></a></li>
+                            <li><a class="twitter" href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a class="google" href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
+                            <li><a class="instagram" href="#" target="_blank"><i class="fab fa-instagram me-0"
+                                        aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- end social media -->
+            </div>
+        </div>
+    </footer>
+    <!-- lopp uus footer -->
 
     <!-- start scroll to top -->
     <a class="scroll-top-arrow" href="javascript:void(0);"><i class="ti-arrow-up"></i></a>
