programmide ikoonide lisamine

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                         <!-- end portfolio item -->
                         <!-- start  portfolio item -->
                         <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
-                            <a href="kalender.html">
+                            <a href="daim_marabou_uhistend.html">
                                 <figure>
                                     <div class="portfolio-img"><img
                                             src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673710877/Koduleht/floor-display-stand-mockup-right-view_2000x2000_yxnenp.jpg"
